# Projet-de-fin-de-DEC

PlanTest/: 247-527-LI_PlanDeTests_Logiciel_Complete.docx  247-527-LI_PlanDeTests_Materiel_Complete.docx
Projet/: 247-616_Définition-de-Projet-en-TSO.docx  247-616_Planification-de-Projet-en-TSO.docx  bom.xlsx
SparkTime/: CMakeLists.txt  sdkconfig
SparkTime_07mai/: CMakeLists.txt  README.md
SparkTime_07mai/main/: CMakeLists.txt  idf_component.yml  main.c  main.h
SparkTime_07mai/main/GestionHeure/: processusAPITemps.c  processusAPITemps.h  processusGestionHeure.c  processusGestionHeure.h
SparkTime_07mai/main/GestionTemperature/: interfaceSenseurTemperature.c
SparkTime_07mai/main/GestionWeb/: gestionWifi.c  gestionWifi.h  interfaceServeurWeb.c  piloteServeurWeb.c  piloteServeurWeb.h  processusServeurWeb.c  processusServeurWeb.h
SparkTime_07mai/main/Neopixel/: interfaceGestionNeopixel.c  interfaceGestionNeopixel.h  piloteNeopixel.c  piloteNeopixel.h  processusAffichageNeopixel.c  processusAffichageNeopixel.h
SparkTime_Prog/: CMakeLists.txt  README.md
SparkTime_Prog/main/: CMakeLists.txt  main.c  main.h
SparkTime_Prog/main/GestionHeure/: processusGestionHeure.c
SparkTime_Prog/main/GestionTemperature/: interfaceSenseurTemperature.h  piloteSenseurTemperature.c  processusGestionTemperature.h
SparkTime_Prog/main/GestionWeb/: gestionWifi.c  gestionWifi.h  interfaceServeurWeb.c  interfaceServeurWeb.h  piloteServeurWeb.c  piloteServeurWeb.h  processusServeurWeb.c  processusServeurWeb.h
SparkTime_Prog/main/Neopixel/: interfaceGestionNeopixel.c  interfaceGestionNeopixel.h  piloteGestionNeopixel.c  piloteGestionNeopixel.h  processusAffichageNeopixel.c  processusAffichageNeopixel.h
testDeuxSorteNeopixel/: CMakeLists.txt
testDeuxSorteNeopixel/main/: CMakeLists.txt  idf_component.yml  main.c  piloteTest.c  piloteTest.h
