idf_component_register(
                    SRCS 
                        "GestionTemperature/interfaceSenseurTemperature.c" 
                        "GestionTemperature/processusGestionTemperature.c" 
                        "GestionTemperature/piloteSenseurTemperature.c" 
                        "GestionHeure/processusAPITemps.c" 
                        "GestionHeure/processusGestionHeure.c" 
                        "Neopixel/processusAffichageNeopixel.c" 
                        "Neopixel/interfaceGestionNeopixel.c" 
                        "main.c"
                    INCLUDE_DIRS 
                        "." 
                        "Neopixel"
                    REQUIRES 
                        driver 
                        zorxx__neopixel)
