idf_component_register(
                    SRCS 
                        "GestionTemperature/interfaceSenseurTemperature.c" 
                        "GestionTemperature/processusGestionTemperature.c" 
                        "GestionTemperature/piloteSenseurTemperature.c" 
                        "GestionHeure/processusAPITemps.c" 
                        "GestionHeure/processusGestionHeure.c" 
                        "GestionWeb/gestionWifi.c"
                        "GestionWeb/interfaceServeurWeb.c"
                        "GestionWeb/piloteServeurWeb.c"
                        "GestionWeb/processusServeurWeb.c"
                        "Neopixel/processusAffichageNeopixel.c" 
                        "Neopixel/interfaceGestionNeopixel.c" 
                        "main.c"
                    INCLUDE_DIRS 
                        "." 
                        "Neopixel"
                    REQUIRES 
                        driver 
                        zorxx__neopixel
                        esp_http_server
                        esp_wifi 
                        nvs_flash 
                        esp_netif)
